force-app/main/default/objects/Feedback__c/fields/Feedback_Text__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Text__c</fullName>
    <label>Feedback Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>