force-app/main/default/objects/Feedback__c/fields/Rating_c__c.field-meta.xml
<CustomField>
    <fullName>Rating_c__c</fullName>
    <label>Rating</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>